Fix menu paddings on mobile

--- a/assets/scss/_style_common.scss
+++ b/assets/scss/_style_common.scss
@@ -95,6 +95,9 @@ body > .container-fluid > .container-header,
     background-size: contain;
     background-repeat: no-repeat;
   }
+  #social-media-link {
+    margin-top: 30px;
+  }
 }
 #map {
   span.map {
