--- a/assets/scss/_style_xs.scss
+++ b/assets/scss/_style_xs.scss
@@ -165,9 +165,7 @@ h1.slogen {
     width: 200px;
   }
 }
-.navbar-nav {
-  margin: 15px 0;
-}
+
 .navbar-default .navbar-nav>li>a {
   font-weight: 600;
   letter-spacing: 1.5px;
@@ -178,11 +176,17 @@ h1.slogen {
   }
 }
 @media (orientation: portrait) {
+  .navbar-nav {
+    margin: 30px 0 10px;
+  }
   .navbar-default .navbar-nav>li>a {
     line-height: 55px;
   }
 }
 @media (orientation: landscape) {
+  .navbar-nav {
+    margin: 20px 0 10px;
+  }
   .navbar-default .navbar-nav>li>a {
     line-height: 35px;
   }
